# RaidSplitCalculator

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
bot/: __main__.py  bot_commands.py  database.py  helpers.py  raid.py
raidsplit/: __main__.py  bot_commands.py  database.py  localfile_db.py  raid.py
scripts/: generate_oauth.py
